// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker should render with maximum props defined 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box -clickable root uui-size-36 uui-control-mode-form"
  >
    <div
      aria-label="Icon in input"
      class="container uui-icon uui-enabled uui-control_icon"
    >
      <svg
        class=""
      />
    </div>
    <input
      class="uui-input"
      placeholder="Test"
      tabindex="0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`DatePicker should render with minimum props defined 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box -clickable root uui-size-36 uui-control-mode-form"
  >
    <div
      aria-label="Icon in input"
      class="container uui-icon uui-enabled uui-control_icon"
    >
      <svg
        class=""
      />
    </div>
    <input
      class="uui-input"
      placeholder="MMM D, YYYY"
      tabindex="0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
